theme standard - rtl.css - fix regression in icons alignment in blocks

--- a/theme/standard/rtl.css
+++ b/theme/standard/rtl.css
@@ -685,16 +685,16 @@ padding:5px;
 }
 
 /*  block - online users . fix alignment of users and evenvelop icons */
-.block_online_users .listentry div.message,
+/*.block_online_users .listentry div.message,
 .block_messages .listentry div.message {
     float: left;
 }
 .block_online_users .listentry div.user,
 .block_messages .listentry div.user {
     float: right;
-}
+}*/
 
 /*  blocks : activities , my courses, admin. fix alignments of icons */
-.sideblock div.column.c0 {
+/*.sideblock div.column.c0 {
     float: right;
-}
+}*/
